--- a/Kiosco.Ioc/Kiosco.Ioc.csproj
+++ b/Kiosco.Ioc/Kiosco.Ioc.csproj
@@ -1,16 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Kiosco.Datos\Kiosco.Datos.csproj" />
-    <ProjectReference Include="..\Kiosco.Entidades\Kiosco.Entidades.csproj" />
-    <ProjectReference Include="..\Kiosco.Ioc\Kiosco.Ioc.csproj" />
     <ProjectReference Include="..\Kiosco.Servicio\Kiosco.Servicio.csproj" />
   </ItemGroup>
 
